WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247321
REGRESSION (
256119@main
,
256136@main
): The News app crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=247321
Summary
REGRESSION (256119@main, 256136@main): The News app crashes on launch
Wenson Hsieh
Reported
2022-11-01 09:10:27 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-11-01 09:15:41 PDT
rdar://101784403
Wenson Hsieh
Comment 2
2022-11-01 09:17:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/6000
EWS
Comment 3
2022-11-01 11:17:55 PDT
Committed
256190@main
(193d0064ca5b): <
https://commits.webkit.org/256190@main
> Reviewed commits have been landed. Closing PR #6000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug