Cherry-pick 193d0064ca5b. rdar://problem/101784403

REGRESSION (256119@main, 256136@main): The News app crashes on launch
    https://bugs.webkit.org/show_bug.cgi?id=247321
    rdar://101784403

    Reviewed by J Pascoe and Tim Horton.

    In Catalyst, the value of `crossSiteTrackingPreventionDisabledDomains` ends up being uninitialized
    when we try to retain it. Fix this by initializing it to `nil`.

    * Source/WebKit/UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
    (WebKit::WebsiteDataStore::initializeManagedDomains):

    Canonical link: https://commits.webkit.org/256190@main

Canonical link: https://commits.webkit.org/256138.5@safari-7615.1.12-branch